Modernize DOMForwardedWriteTransactionTest
Use proper assertions instead of try/catch blocks, fail()s and
assertTrue()s.

Change-Id: Ife42d56c54f725d2cf842b429c552172dfce429d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 339520f13682153af2d33511a40319f508315635)